@@ -1,5 +1,13 @@
 2007-01-11  Akim Demaille  <demaille@gostai.com>
 
+	Shorten scopes, fix warnings
+	* src/uvalue.cc (UValue::copy): Make it clear which missing
+	cases are valid (e.g., DATA_VOID), and which are to reject.
+	Possibly some cases are missing, and will have to be added,
+	but the test suite passes.
+
+2007-01-11  Akim Demaille  <demaille@gostai.com>
+
 	renaming
 	(This is to split the following patch.)
 	* src/uvalue.cc: ret -> res.
